# tamatool

./: .gitignore  CMakeLists.txt  README.md
res/: background.h  icons.h
src/: image.c  mem_edit.c  state.c  state.h  tamatool.c
vita/: BUILDING.md  CMakeLists.txt  copy_self.sh
vita/sce_sys/livearea/contents/: template.xml
